  - Japanese localisation updated to 3.0.0 (UI)
  - Russian localisation updated to 3.0.0 (UI, readme, Instant Start)
  - Turkish localisation updated to 3.0.0 (UI)

----------------------------------------------------------------------
 OmegaT 2.6.3 update 11
----------------------------------------------------------------------
   2 Enhancements
   2 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.6.3 update 11 vs. 2.6.3 update 10


  Other enhancements:

  -  Specific preferences can be built into a Java Web Start package at
compilation time, by putting an omegat.prefs file in /release/WebStart-specific
(backported from 3.1)

  - Specific user interface layout can be built into a Java Web Start package at
compilation time, by putting an uiLayout.xml file in /release/WebStart-specific
(backported from 3.1)

  Bug fixes: 

  - No more warning about mixed content in the Java Web Start package. Requires
ant-contrib. See details in /release/WebStart-specific/build.xml
(backported from 3.1)

  - Excel files: when using the option to translate sheet names, some not-
translatable text could appear (the content of <definedNames> tags)

  Localisation updates:

  - Japanese localisation updated to 2.6.3 update 10 (UI, readme)

----------------------------------------------------------------------
 OmegaT 2.6.3 update 10 (2014-06-18)
----------------------------------------------------------------------
   0 Enhancement
   2 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.6.3 update 10 vs. 2.6.3 update 9

  Bug fixes: 

  - Swedish segmentation rules were using a wrong language code

  - In team projects, a "server authentication" could happen, which
prevented from properly entering credentials

  Localisation updates:

  - Japanese localisation updated to 2.6.3 update 7 (Documentation)
